Modified the css so that root container spans complete height of the viewport width when working in mobile dimenstion also preventing the overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,10 @@
   --padding-xl: 2em;
 
 }
+
+
+/* html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+} */
